<resources>
    <string name="app_name">InventoryApp</string>
    <string name="add_book">Add New Book</string>
    <string name="book_name">Book Name</string>
    <string name="supplier_address">Book Name</string>
    <string name="book_price">Price</string>
    <string name="book_price_currency">Currency</string>
    <string name="book_quantity">Quantity</string>
    <string name="book_supplier_name">Supplier Name</string>
    <string name="book_supplier_phone_number">Supplier Phone Number</string>
    <string name="book_supplier_address">Book Supplier Adresse</string>

    <string name="supplier_unknown">Unknown</string>
    <string name="supplier_amazon">AMAZON</string>
    <string name="supplier_thalia">THALIA</string>
    <string name="supplier_exlibris">EXLIBRIS</string>
    <string name="supplier_national_geographic">NATIONAL GEOGRAPHIC</string>
    <string name="menu_save">Menu Save</string>
</resources>
